# agent-audit

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Cargo.toml  README.md  ch-README.md  flake.nix  pyproject.toml
.agents/skills/: workflow.md
.agents/skills/audit-chain-checks/: SKILL.md
.agents/skills/audit-dependency-scan/: SKILL.md
.agents/skills/audit-echidna/: SKILL.md
.agents/skills/audit-ir-builder/: SKILL.md
.agents/skills/audit-materials/: SKILL.md
.agents/skills/audit-slither/: SKILL.md
.agents/skills/audit-source-fetch/: SKILL.md
.agents/skills/audit-workspace/: SKILL.md
.agents/skills/foundry-anvil/: SKILL.md
.agents/skills/foundry-cast/: SKILL.md
.agents/skills/foundry-chisel/: SKILL.md
.agents/skills/foundry-forge/: SKILL.md
.agents/skills/smart-contract-audit/: SKILL.md
.codex/: config.toml
.codex/skills/aggregate-materials/: SKILL.md
.codex/skills/dependency-scan/: SKILL.md
.codex/skills/done/: SKILL.md
.codex/skills/echidna/: SKILL.md
.codex/skills/foundry-anvil/: SKILL.md
.codex/skills/foundry-forge/: SKILL.md
.codex/skills/ir-builder/: SKILL.md
.codex/skills/slither/: SKILL.md
.codex/skills/source-fetch/: SKILL.md
.codex/skills/workspace/: SKILL.md
.github/workflows/: lint-workflows.yml  publish-images.yml
.opencode/agents/: audit.md
.opencode/skills/aggregate-materials/: SKILL.md
.opencode/skills/dependency-scan/: SKILL.md
.opencode/skills/echidna/: SKILL.md
.opencode/skills/foundry-cast/: SKILL.md
.opencode/skills/slither/: SKILL.md
.opencode/skills/source-fetch/: SKILL.md
EVMbench/: README.md  overlay.sh
crytic-export/: combined_solc.json
dispatcher/: Cargo.toml
dispatcher/src/: main.rs
docker/: .dockerignore  .env.example  AGENTS.md  Dockerfile  README.md  build-dispatcher.sh  build.sh  dispatcher.Dockerfile  entrypoint.sh  run.sh  sync-context.sh
docker/.codex/: config.toml
docker/codex-runner/: agent-audit-run.mjs
docker/src/: config.rs  workspace.rs
eval_docker/: AGENTS.md  Dockerfile  README.md  agent-audit-guard.sh  build.sh  run.sh  start.sh
eval_docker/codex-runner/: agent-audit-run.mjs
k3s/: README.md  dispatcher-configmap.yaml  dispatcher-deployment.yaml  dispatcher-rbac.yaml  dispatcher-secret.example.yaml  kustomization.yaml  namespace.yaml  redis.yaml  runner-configmap.yaml  runner-secret.example.yaml  server-config.example.yaml
scripts/: api_compat_check.py  batch.bash  batch.py  batch.sh  enqueue_redis.py  tls.bash
scripts/addresses/: addrs.txt
src/: config.rs  error.rs  lib.rs  main.rs  output.rs  serde_ext.rs  workspace.rs
src/agent_audit/: __init__.py  __main__.py  cli.py  config.py  dependency_analyzers.py  dependency_discovery.py  mcp_support.py  mongo_store.py  schemas.py  source_fetch.py  source_ir.py  tooling.py  workspace.py
src/analysis/: dependencies.rs  discovery.rs  mod.rs
src/cli/: args.rs  mod.rs  runner.rs
src/models/: artifact.rs  command.rs  discovery.rs  envelope.rs  finding.rs  identity.rs  mod.rs  run.rs  source.rs  step.rs  tooling.rs
src/rust_cli/: cli.rs  config.rs  dependency_analyzers.rs  dependency_discovery.rs  envelope.rs  mod.rs  mongo_store.rs  pipeline.rs  schemas.rs  source_fetch.rs  workspace.rs
src/services/: mod.rs  run_sync.rs  source_provider.rs
tests/: cli_smoke.rs
xtask/src/: main.rs
(+47 files in other folders)
