[workspace]
members = ["xtask"]

[package]
name = "agent-audit"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
dotenvy = "0.15"
fs4 = "0.13"
mongodb = { version = "3.6", default-features = false, features = ["sync", "rustls-tls", "dns-resolver", "bson-3", "compat-3-3-0"] }
rand = "0.9"
regex = "1.12"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls", "socks"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.15"
sha3 = "0.10"
sha2 = "0.10"
thiserror = "2.0"
time = { version = "0.3", features = ["formatting", "macros", "parsing", "serde", "serde-well-known"] }
url = { version = "2.5", features = ["serde"] }
walkdir = "2.5"
pathdiff = "0.2"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.15"
