[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "agent-audit"
version = "0.1.0"
description = "Codex-first smart contract audit workspace for EVM/Solidity."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "python-dotenv>=1.0.0",
]

[project.scripts]
agent-audit = "agent_audit.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_audit"]
