[package]
name = "agent-audit-dispatcher"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6", features = ["derive", "env"] }
dotenvy = "0.15"
k8s-openapi = { version = "0.27", features = ["v1_32"] }
kube = { version = "3.1.0", default-features = false, features = ["client", "rustls-tls"] }
redis = { version = "1.2", default-features = false, features = ["tokio-comp", "streams"] }
rustls = { version = "0.23.40", features = ["ring"] }
sha2 = "0.10"
thiserror = "2.0"
tokio = { version = "1.44", features = ["macros", "rt-multi-thread"] }
